# tetra

./: .gitignore  README.md  bench_500m_cpu.py  bench_avx.py  benchmark_speed.py  build_cpp.py  requirements.txt  train.py  train_tokenizer.py
examples/tiny/: training_history.json  training_history_SBF.json  training_history_STE.json
inference/: CMakeLists.txt  benchmark_ppl.py  build.bat  build.sh  export_model.py  run_inference.py  tetra.cpp  tetra.h  verify_export.py
scripts/: prepare_data.py  prepare_parquet.py  train_tokenizer.py
ternary_llm/: __init__.py  attention.py  data.py  ffn.py  hybrid.py  int8.py  layers.py  mla.py  quantization.py  ssm.py  trainer.py  transformer.py
ternary_llm/csrc/: __init__.py  setup.py  ternary_ops.cpp  ternary_ops_avx2.cpp  ternary_ops_avx512.cpp
tests/: test_convergence.py  test_layers.py  test_prototype.py  test_quantization.py  test_transformer.py
tokenizer/: tetra_tokenizer.json  vocab_info.json
